[package]
name = "ufb"
version = "1.6.1"
edition = "2021"
license = "GPL-3.0-or-later"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = true

[profile.release.build-override]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
opt-level = 3
overflow-checks = false
strip = true
