[package]
name = "unsafe-4-bit"
version = "1.6.7"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "ufb"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = true

[profile.release.build-override]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
opt-level = 3
overflow-checks = false
strip = true
